src/HashParser.java
// Generated from Hash.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BASTE=1, BIAR=2, KLASS=3, IN=4, JADID=5, BEBIN=6, BEDE=7, ADAD=8, ASHARI=9, 
		BOOLE=10, MATN=11, HARF=12, HICH=13, KHALI=14, DOROST=15, GHALAT=16, AGE=17, 
		BOOD=18, VAGARNA=19, TA=20, BARAYE=21, SHEKAN=22, EDAME=23, ENTEKHAB=24, 
		HALAT=25, DIGAR=26, EMTEHAN=27, GEREFTAR=28, AKHAR=29, BENDAZ=30, BECHAP=31, 
		BEKHAN=32, SEFR_BOOD=33, MAHDOODE_NADOROST=34, JADVAL_KHALI=35, GHEIRE_MOJAZ=36, 
		PLUS_ASSIGN=37, MINUS_ASSIGN=38, MUL_ASSIGN=39, DIV_ASSIGN=40, PLUS_PLUS=41, 
		MINUS_MINUS=42, POWER=43, EQ=44, NEQ=45, GTE=46, LTE=47, AND=48, OR=49, 
		ASSIGN=50, GT=51, LT=52, NOT=53, PLUS=54, MINUS=55, STAR=56, DIV=57, MOD=58, 
		LPAREN=59, RPAREN=60, LBRACE=61, RBRACE=62, SEMI=63, COMMA=64, DOT=65, 
		FLOAT=66, INT=67, STRING=68, CHAR=69, CLASS_ID=70, ID=71, LINE_COMMENT=72, 
		BLOCK_COMMENT=73, WS=74;
	public static final int
		RULE_program = 0, RULE_packageDecl = 1, RULE_importDecl = 2, RULE_qualifiedName = 3, 
		RULE_namePart = 4, RULE_topLevelDecl = 5, RULE_typeName = 6, RULE_returnType = 7, 
		RULE_primitiveType = 8, RULE_varDecl = 9, RULE_varDeclNoSemi = 10, RULE_functionDecl = 11, 
		RULE_constructorDecl = 12, RULE_paramList = 13, RULE_param = 14, RULE_classDecl = 15, 
		RULE_classMember = 16, RULE_block = 17, RULE_statement = 18, RULE_assignmentStmt = 19, 
		RULE_assignment = 20, RULE_lvalue = 21, RULE_assignOp = 22, RULE_ifStmt = 23, 
		RULE_whileStmt = 24, RULE_forStmt = 25, RULE_forInit = 26, RULE_forUpdate = 27, 
		RULE_switchStmt = 28, RULE_caseBlock = 29, RULE_defaultBlock = 30, RULE_tryStmt = 31, 
		RULE_catchClause = 32, RULE_finallyClause = 33, RULE_returnStmt = 34, 
		RULE_breakStmt = 35, RULE_continueStmt = 36, RULE_printStmt = 37, RULE_inputStmt = 38, 
		RULE_throwStmt = 39, RULE_throwTarget = 40, RULE_exprStmt = 41, RULE_exceptionType = 42, 
		RULE_exceptionCreation = 43, RULE_objectCreation = 44, RULE_argumentList = 45, 
		RULE_expr = 46, RULE_logicalOrExpr = 47, RULE_logicalAndExpr = 48, RULE_equalityExpr = 49, 
		RULE_relationalExpr = 50, RULE_additiveExpr = 51, RULE_multiplicativeExpr = 52, 
		RULE_powerExpr = 53, RULE_unaryExpr = 54, RULE_postfixExpr = 55, RULE_postfixPart = 56, 
		RULE_postfixIncDec = 57, RULE_incDecExpr = 58, RULE_primaryExpr = 59, 
		RULE_literal = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "packageDecl", "importDecl", "qualifiedName", "namePart", 
			"topLevelDecl", "typeName", "returnType", "primitiveType", "varDecl", 
			"varDeclNoSemi", "functionDecl", "constructorDecl", "paramList", "param", 
			"classDecl", "classMember", "block", "statement", "assignmentStmt", "assignment", 
			"lvalue", "assignOp", "ifStmt", "whileStmt", "forStmt", "forInit", "forUpdate", 
			"switchStmt", "caseBlock", "defaultBlock", "tryStmt", "catchClause", 
			"finallyClause", "returnStmt", "breakStmt", "continueStmt", "printStmt", 
			"inputStmt", "throwStmt", "throwTarget", "exprStmt", "exceptionType", 
			"exceptionCreation", "objectCreation", "argumentList", "expr", "logicalOrExpr", 
			"logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
			"powerExpr", "unaryExpr", "postfixExpr", "postfixPart", "postfixIncDec", 
			"incDecExpr", "primaryExpr", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'baste'", "'biar'", "'klass'", "'in'", "'jadid'", "'bebin'", "'bede'", 
			"'adad'", "'ashari'", "'boole'", "'matn'", "'harf'", "'hich'", "'khali'", 
			"'dorost'", "'ghalat'", "'age'", "'bood'", "'vagarna'", "'ta'", "'baraye'", 
			"'shekan'", "'edame'", "'entekhab'", "'halat'", "'digar'", "'emtehan'", 
			"'gereftar'", "'akhar'", "'bendaz'", "'bechap'", "'bekhan'", "'SefrBood'", 
			"'MahdoodeNadorost'", "'JadvalKhali'", "'GheireMojaz'", "'+='", "'-='", 
			"'*='", "'/='", "'++'", "'--'", "'**'", "'=='", "'!='", "'>='", "'<='", 
			"'&&'", "'||'", "'='", "'>'", "'<'", "'!'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'('", "')'", "'{'", "'}'", "';'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BASTE", "BIAR", "KLASS", "IN", "JADID", "BEBIN", "BEDE", "ADAD", 
			"ASHARI", "BOOLE", "MATN", "HARF", "HICH", "KHALI", "DOROST", "GHALAT", 
			"AGE", "BOOD", "VAGARNA", "TA", "BARAYE", "SHEKAN", "EDAME", "ENTEKHAB", 
			"HALAT", "DIGAR", "EMTEHAN", "GEREFTAR", "AKHAR", "BENDAZ", "BECHAP", 
			"BEKHAN", "SEFR_BOOD", "MAHDOODE_NADOROST", "JADVAL_KHALI", "GHEIRE_MOJAZ", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "PLUS_PLUS", 
			"MINUS_MINUS", "POWER", "EQ", "NEQ", "GTE", "LTE", "AND", "OR", "ASSIGN", 
			"GT", "LT", "NOT", "PLUS", "MINUS", "STAR", "DIV", "MOD", "LPAREN", "RPAREN", 
			"LBRACE", "RBRACE", "SEMI", "COMMA", "DOT", "FLOAT", "INT", "STRING", 
			"CHAR", "CLASS_ID", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hash.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HashParser.EOF, 0); }
		public PackageDeclContext packageDecl() {
			return getRuleContext(PackageDeclContext.class,0);
		}
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BASTE) {
				{
				setState(122);
				packageDecl();
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BIAR) {
				{
				{
				setState(125);
				importDecl();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KLASS) | (1L << IN) | (1L << JADID) | (1L << BEBIN) | (1L << BEDE) | (1L << ADAD) | (1L << ASHARI) | (1L << BOOLE) | (1L << MATN) | (1L << HARF) | (1L << KHALI) | (1L << DOROST) | (1L << GHALAT) | (1L << AGE) | (1L << TA) | (1L << BARAYE) | (1L << SHEKAN) | (1L << EDAME) | (1L << ENTEKHAB) | (1L << EMTEHAN) | (1L << BENDAZ) | (1L << BECHAP) | (1L << BEKHAN) | (1L << SEFR_BOOD) | (1L << MAHDOODE_NADOROST) | (1L << JADVAL_KHALI) | (1L << GHEIRE_MOJAZ) | (1L << PLUS_PLUS) | (1L << MINUS_MINUS) | (1L << NOT) | (1L << PLUS) | (1L << MINUS) | (1L << LPAREN) | (1L << LBRACE))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (FLOAT - 66)) | (1L << (INT - 66)) | (1L << (STRING - 66)) | (1L << (CHAR - 66)) | (1L << (CLASS_ID - 66)) | (1L << (ID - 66)))) != 0)) {
				{
				{
				setState(131);
				topLevelDecl();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclContext extends ParserRuleContext {
		public TerminalNode BASTE() { return getToken(HashParser.BASTE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HashParser.SEMI, 0); }
		public PackageDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterPackageDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitPackageDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitPackageDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclContext packageDecl() throws RecognitionException {
		PackageDeclContext _localctx = new PackageDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(BASTE);
			setState(140);
			qualifiedName();
			setState(141);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode BIAR() { return getToken(HashParser.BIAR, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HashParser.SEMI, 0); }
		public TerminalNode DOT() { return getToken(HashParser.DOT, 0); }
		public TerminalNode STAR() { return getToken(HashParser.STAR, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitImportDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitImportDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(BIAR);
			setState(144);
			qualifiedName();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(145);
				match(DOT);
				setState(146);
				match(STAR);
				}
			}

			setState(149);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameContext extends ParserRuleContext {
		public List<NamePartContext> namePart() {
			return getRuleContexts(NamePartContext.class);
		}
		public NamePartContext namePart(int i) {
			return getRuleContext(NamePartContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(HashParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(HashParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qualifiedName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			namePart();
			setState(156);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(152);
					match(DOT);
					setState(153);
					namePart();
					}
					} 
				}
				setState(158);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamePartContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HashParser.ID, 0); }
		public TerminalNode CLASS_ID() { return getToken(HashParser.CLASS_ID, 0); }
		public NamePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namePart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterNamePart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitNamePart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitNamePart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamePartContext namePart() throws RecognitionException {
		NamePartContext _localctx = new NamePartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namePart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_la = _input.LA(1);
			if ( !(_la==CLASS_ID || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelDeclContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterTopLevelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitTopLevelDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitTopLevelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_topLevelDecl);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				classDecl();
				}
				break;
			case BEBIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				functionDecl();
				}
				break;
			case IN:
			case JADID:
			case BEDE:
			case ADAD:
			case ASHARI:
			case BOOLE:
			case MATN:
			case HARF:
			case KHALI:
			case DOROST:
			case GHALAT:
			case AGE:
			case TA:
			case BARAYE:
			case SHEKAN:
			case EDAME:
			case ENTEKHAB:
			case EMTEHAN:
			case BENDAZ:
			case BECHAP:
			case BEKHAN:
			case SEFR_BOOD:
			case MAHDOODE_NADOROST:
			case JADVAL_KHALI:
			case GHEIRE_MOJAZ:
			case PLUS_PLUS:
			case MINUS_MINUS:
			case NOT:
			case PLUS:
			case MINUS:
			case LPAREN:
			case LBRACE:
			case FLOAT:
			case INT:
			case STRING:
			case CHAR:
			case CLASS_ID:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeNameContext extends ParserRuleContext {
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TerminalNode CLASS_ID() { return getToken(HashParser.CLASS_ID, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitTypeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitTypeName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeNameContext typeName() throws RecognitionException {
		TypeNameContext _localctx = new TypeNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeName);
		try {
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADAD:
			case ASHARI:
			case BOOLE:
			case MATN:
			case HARF:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				primitiveType();
				}
				break;
			case CLASS_ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				match(CLASS_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeContext extends ParserRuleContext {
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TerminalNode HICH() { return getToken(HashParser.HICH, 0); }
		public TerminalNode CLASS_ID() { return getToken(HashParser.CLASS_ID, 0); }
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterReturnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitReturnType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitReturnType(this);
			else return visitor.visitChildren(this);
		}
	}
